# parallel_robot

./: .gitignore  README.md
references/: ref_cart_TR15_CF1_V1.txt  ref_cart_TRR0_CF1_IdV1.txt  ref_cart_TRR17_CF1_5P_IdV1.txt  ref_cart_TRR3_CF1_5P_IdV1.txt  ref_qinde_TR15_CF1_V1.txt  ref_qinde_TRR0_CF1_IdV1.txt  ref_qinde_TRR17_CF1_5P_IdV1.txt  ref_qinde_TRR3_CF1_5P_IdV1.txt  refecart_TRR8_identificar.txt  refeprism_indep_TRR8.txt  refeprism_pata1.txt  refeprism_pata1234.txt  refeprism_pata2.txt  refeprism_pata3.txt  refeprism_pata4.txt  referencia_manual.txt
src/pr_aux/: CMakeLists.txt  package.xml
src/pr_aux/include/pr_aux/: derivator.hpp  replayer.hpp
src/pr_aux/src/: derivator.cpp  replayer.cpp
src/pr_bringup/: CMakeLists.txt  package.xml
src/pr_bringup/config/: mocap_server.yaml  pr_config_params.yaml  pr_gus.yaml  pr_gus_sing_evader.yaml  pr_pdg.yaml  robot_config.yaml
src/pr_bringup/config/simulated/: pr_pdg_simulink.yaml
src/pr_bringup/launch/: pr_gus.launch.py  pr_gus_simulink.launch.py  pr_gus_sing_evader.launch.py  pr_gus_sing_evader_replayed.launch.py  pr_pdg.launch.py  pr_pdg_simulink.launch.py  pr_rl.launch.py
src/pr_bringup/launch/launch_replay/: pr_gus_sing_evader_replayed.launch.py
src/pr_controllers/: CMakeLists.txt  package.xml
src/pr_controllers/include/pr_controllers/: gus_controller.hpp  pdg_controller.hpp
src/pr_controllers/src/: gus_controller.cpp  pdg_controller.cpp
src/pr_lib/: CMakeLists.txt  README.md  package.xml
src/pr_lib/include/pr_lib/: pr_limits.hpp  pr_model.hpp  pr_singularity.hpp  pr_utils.hpp
src/pr_lib/pr_lib_py/: load_params.py
src/pr_lib/src/: pr_limits.cpp  pr_model.cpp  pr_singularity.cpp  pr_utils.cpp
src/pr_main/: CMakeLists.txt  package.xml
src/pr_main/src/: pr_gus_main.cpp
src/pr_mocap/: CMakeLists.txt  package.xml
src/pr_mocap/include/pr_mocap/: error_model.hpp  pr_x_mocap.hpp
src/pr_mocap/src/: error_model.cpp  pr_x_mocap.cpp
src/pr_modelling/: CMakeLists.txt  package.xml
src/pr_modelling/include/pr_modelling/: ang_ots.hpp  dep_jac.hpp  for_jac.hpp  for_kin.hpp  ind_jac.hpp  inv_kin.hpp  jac_dep.hpp  q_grav.hpp  rast_t.hpp  state_publisher.hpp
src/pr_modelling/src/: ang_ots.cpp  dep_jac.cpp  for_jac.cpp  for_kin.cpp  ind_jac.cpp  inv_kin.cpp  jac_dep.cpp  q_grav.cpp  rast_t.cpp  state_publisher.cpp
src/pr_msgs/: CMakeLists.txt  package.xml
src/pr_msgs/msg/: PRArray.msg  PRArrayH.msg  PRFloatH.msg  PRForceState.msg  PRMat.msg  PRMatH.msg  PRMocap.msg  PROTS.msg  PRState.msg
src/pr_msgs/srv/: Trajectory.srv
src/pr_ref_gen/: CMakeLists.txt  package.xml
src/pr_ref_gen/include/pr_ref_gen/: ref_pose.hpp  ref_server.hpp  sing_evader.hpp
src/pr_ref_gen/src/: ref_pose.cpp  ref_server.cpp  sing_evader.cpp
src/pr_rl/: package.xml  setup.cfg  setup.py
src/pr_rl/pr_rl/: pr_rl_main.py
src/pr_sensors_actuators/: CMakeLists.txt  package.xml
src/pr_sensors_actuators/include/pr_sensors_actuators/: encoders.hpp  encoders_sim.hpp  force_sensor.hpp  motor.hpp
src/pr_sensors_actuators/include/pr_sensors_actuators/simulated/: encoders_simulink.hpp  encoders_simulink_socket.hpp  motors_simulink.hpp  motors_simulink_socket.hpp  simulink_socket_interface.hpp
src/pr_sensors_actuators/launch/: pr_encoders.launch.py  pr_motors.launch.py
src/pr_sensors_actuators/src/: encoders.cpp  encoders_sim.cpp  force_sensor.cpp  motor.cpp
src/pr_sensors_actuators/src/simulated/: encoders_simulink.cpp  encoders_simulink_socket.cpp  motors_simulink.cpp  motors_simulink_socket.cpp  sim_exe.cpp  simulink_socket_interface.cpp
