<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pr_controllers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="paralelo4dofnew@todo.todo">paralelo4dofnew</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pr_msgs</build_depend>
  <build_depend>pr_lib</build_depend>
  <build_depend>Eigen3</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <build_depend>message_filters</build_depend>
  <exec_depend>pr_msgs</exec_depend>
  <build_depend>pr_lib</build_depend>
  <build_depend>Eigen3</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
