<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pr_main</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="paralelo4dofnew@todo.todo">paralelo4dofnew</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pr_sensors_actuators</depend>
  <depend>pr_ref_gen</depend>
  <depend>pr_aux</depend>
  <depend>pr_controllers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
